syntax = "proto3";
package elys.incentive;

option go_package            = "github.com/elys-network/elys/x/incentive/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

// DexRewardsTracker
message DexRewardsTracker {
    string num_blocks = 1 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable) = false
    ]; 
    string amount = 2 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
    string amount_collected_by_other_tracker = 3 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ]; 
}
  